# Rust-Exercises-The-Start

./: Cargo.toml  README.md
src/: main.rs  slice.rs  strings.rs
src/Enums/src/: main.rs
src/Generics/src/: main.rs
src/Match/: Cargo.toml
src/Match/src/: main.rs
src/Ownership/src/: main.rs
src/Structures/src/: main.rs
src/Vectors/src/: main.rs
src/blockip_scan/: Cargo.toml
src/blockip_scan/src/: main.rs
src/calc/src/: main.rs
src/challnge_c_solution/: Cargo.toml
src/challnge_c_solution/src/: main.rs
src/comparison_operators_and_truth_tables/: Cargo.toml
src/comparison_operators_and_truth_tables/src/: main.rs
src/concat/src/: main.rs
src/conditional_statements/: Cargo.toml
src/conditional_statements/src/: main.rs
src/dependecies/: Cargo.toml
src/dependecies/src/: main.rs
src/error_handling/src/: main.rs
src/file_input_and_output/: Cargo.toml
src/file_input_and_output/src/: main.rs
src/functions/src/: main.rs
src/joguinho_do_copilot/: Cargo.toml
src/joguinho_do_copilot/src/: main.rs
src/loops/: Cargo.toml
src/loops/src/: main.rs
src/math_operators/: Cargo.toml
src/math_operators/src/: main.rs
src/modules_and_libraries/: Cargo.toml
src/modules_and_libraries/src/: main.rs
src/references_and_borrowing/src/: main.rs
src/sha256_cracker_DevStorm/: Cargo.toml
src/sha256_cracker_DevStorm/src/: main.rs
src/url_shortener/: url_shortener
src/url_shortener/src/: mapping.txt
