[package]
name = "dependecies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.4"

[build-dependencies]
gtk = "^0.9.2"
#glib = "0.9.3"
gio = "0.17.9"
#```
#I have tried to use `cargo update` and `cargo clean` but it didn't work.
#I have also tried to use `cargo update -p glib` and `cargo update -p gtk` but it didn't work either.
#I have also tried to use `cargo update -p glib-sys` and `cargo update -p gtk-sys` but it didn't work either.
#I have also tried to use `cargo update -p glib-sys --precise 0.9.3` and `cargo update -p gtk-sys --precise 0.9.2` but it didn't work either.
#I have also tried to use `cargo update -p glib-sys --precise 0.9.3` and `cargo update -p gtk-sys --precise 0.9.2` but it didn't work either.
#I have also tried to use `cargo update -p glib-sys --precise 0.9.3` and `cargo update -p gtk-sys --precise 0.9.2` but it didn't work either.
#I have also tried to use `cargo update -p glib-sys --precise 0.9.3` and `cargo update -p gtk-sys --precise 0.9.2` but it didn't work either.
#I have also tried to use `cargo update -p glib-sys --precise 0.9.3` and `cargo update -p gtk-sys --precise 0.9.2` but it didn't work either.
#```
